@@ -38,23 +38,21 @@ public class NonCommandHandler {
      */
     public Response getComplexity(String complexity, long userId, State nextState, String response) {
         State currentState = userStateCache.getUserState(userId);
-        try {
-            validationService.isValidComplexity(Integer.parseInt(complexity));
+        if (validationService.isValidComplexity(complexity)) {
             userStateCache.addParam(userId, complexity);
             List<String> params = userStateCache.getUserParams(userId);
 
             userStateCache.setState(userId, nextState);
             if (nextState == NONE) {
-                String[] splitCommand = {Command.EDIT, params.getFirst(), complexity};
+                String[] splitCommand = {Command.GENERATE, params.get(0), complexity};
 
                 return handlerMapper.getHandler(Command.GENERATE).handle(splitCommand, userId);
             }
 
             return new Response(response, nextState);
-        } catch (IllegalArgumentException e) {
+        } else {
             userStateCache.setState(userId, currentState);
-
-            return new Response(e.getMessage(), currentState);
+            return new Response(COMPLEXITY_ERROR_MESSAGE, currentState);
         }
     }
 
@@ -68,16 +66,14 @@ public class NonCommandHandler {
      */
     public Response getPasswordLength(String length, long userId, State nextState) {
         State currentState = userStateCache.getUserState(userId);
-        try {
-            validationService.isValidLength(Integer.parseInt(length));
+        if (validationService.isValidLength(Integer.parseInt(length))) {
             userStateCache.setState(userId, nextState);
             userStateCache.addParam(userId, length);
 
             return new Response(ENTER_PASSWORD_COMPLEXITY, nextState);
-        } catch (IllegalArgumentException e) {
+        } else {
             userStateCache.setState(userId, currentState);
-
-            return new Response(e.getMessage(), currentState);
+            return new Response(LENGTH_ERROR_MESSAGE, currentState);
         }
     }
 
@@ -140,6 +136,7 @@ public class NonCommandHandler {
 
         if (!validationService.isValidPasswordIndex(userId, Integer.parseInt(index))) {
             userStateCache.setState(userId, NONE);
+            userStateCache.clearParamsForUser(userId);
             return new Response(String.format(PASSWORD_NOT_FOUND_MESSAGE, index), NONE);
         }
 
@@ -163,7 +160,6 @@ public class NonCommandHandler {
      * @return ответ и состояние пользователя
      */
     public Response getSortType(String sortType, Long userId) {
-        userStateCache.addParam(userId, sortType);
         State currentState = userStateCache.getUserState(userId);
         if (currentState.equals(SORT_STEP_1)) {
             String[] splitCommand = {sortType};
@@ -181,8 +177,6 @@ public class NonCommandHandler {
      * @return ответ и состояние пользователя
      */
     public Response getSearchRequest(String searchRequest, Long userId) {
-        userStateCache.addParam(userId, searchRequest);
-
         State currentState = userStateCache.getUserState(userId);
         if (currentState.equals(FIND_STEP_1)) {
             String[] splitCommand = {Command.FIND, searchRequest};
